@@ -87,6 +87,7 @@ sub log {
     }
 }
 
+# FIXME nothing actually uses this?
 sub logger {
     my $self = shift;
     if (@_) {
