@@ -7,12 +7,10 @@ use warnings 'all';
 
 package BZ::Client::XMLRPC::Value;
 
-use BZ::Client::XMLRPC::Handler;
+use parent qw( BZ::Client::XMLRPC::Handler );
 use BZ::Client::XMLRPC::Struct;
 use BZ::Client::XMLRPC::Array;
 use DateTime::Format::ISO8601 ();
-
-our @ISA = qw(BZ::Client::XMLRPC::Handler);
 
 sub start {
     my ( $self, $name ) = @_;
