@@ -2,6 +2,8 @@ Revision history for Perl extension BZ::Client.
 
 Pending
     - Implement the api_key properly
+    - Bug.pm: handle alias() better (i.e. properly)
+    - Replace use+@ISA with 'use parent'
 
 2.0_001 Thursday Sep 17 10:42:00 2015
     - let's make this thing sane....
